# shinkai-ai-chatbot

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/routers/: chat_router.py
app/common/: __init__.py
app/common/utils/: utils.py
app/core/: config.py
app/modules/: llms.py
app/schemas/: __init__.py
app/services/: base.py  chatbot_service.py
docs/: REFERENCE.md
tests/: test_lc_api.py  test_shinkai_llm.py
