[project]
name = "shinkai-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog==6.9.0",
    "fastapi==0.115.6",
    "pydantic-settings==2.7.1",
    "pydantic==2.10.5",
    "uvicorn==0.34.0",
    "langchain-google-genai>=2.0.9",
    "langchain>=0.3.15",
]
